--- a/app/src/main/res/layout/activity_img_save.xml
+++ b/app/src/main/res/layout/activity_img_save.xml
@@ -26,8 +26,8 @@
             android:layout_marginBottom="40dp"
             android:drawablePadding="10dp"/>
 
-        <Button
-            android:id="@+id/btn_image"
+        <ImageView
+            android:id="@+id/iv_image"
             android:layout_width="330dp"
             android:layout_height="400dp"
             android:layout_gravity="center"
